--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,15 @@ python = "^3.7"
 music21 = "^5.7.2"
 plotly = "^4.8.1"
 numpy = "^1.18.5"
+pytest = "^5.4.3"
+scipy = "^1.4.1"
+matplotlib = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.3"
+black = "^19.10b0"
+mypy = "^0.780"
+pylint = "^2.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
